# tocsmith

./: README.md  pyproject.toml
tocsmith/: cli.py  core.py  gui.py
tocsmith/tests/: test_core.py
